Initial framework for digraph

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,9 +20,10 @@
 			<li>TypeScript 2</li>
 			<li>Webpack 1 within GulpJS 3</li>
 			<li>WebSocket</li>
-			<li>Protobuf 3</li>
 		</ul>
 	</article>
+
+	<div id="digraph"></div>
 </main>
 </body>
 </html>
