Support for using Maven

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>Akka Http Webpack Seed</title>
+	<title>Health Mesh</title>
 	<meta name="description" content="Akka Http Webpack Seed"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="author" content="Cory Prowse <cory@prowse.com>"/>
@@ -10,7 +10,7 @@
 </head>
 <body>
 <main>
-	<h1>Akka Http Webpack Seed</h1>
+	<h1>Health Mesh</h1>
 
 	<article>
 		SBT project that uses:
