--- a/ui/index.html
+++ b/ui/index.html
@@ -15,12 +15,16 @@
 	<article>
 		SBT project that uses:
 		<ul>
-			<li>Akka HTTP</li>
-			<li>RxJS 5</li>
-			<li>TypeScript 2</li>
-			<li>Webpack 1 within GulpJS 3</li>
-			<li>WebSocket</li>
-			<li>Sigma</li>
+			<li><a href="http://doc.akka.io/docs/akka-http/current/scala.html">Akka HTTP</a> (Scala 2.12)</li>
+			<li><a href="http://swagger.io">Swagger</a> (See: <a
+				href="/api-docs/swagger.json">/api-docs/swagger.json</a>)
+			</li>
+			<li><a href="http://reactivex.io/rxjs/">RxJS 5</a></li>
+			<li><a href="https://www.typescriptlang.org/">TypeScript 2.1</a></li>
+			<li><a href="https://webpack.github.io/">Webpack 1</a> within <a href="http://gulpjs.com/">GulpJS 3</a></li>
+			<li><a href="https://www.w3.org/TR/websockets/">WebSocket</a></li>
+			<li><a href="https://developers.google.com/protocol-buffers/">Protobuf 3 (Java and JavaScript)</a></li>
+			<li><a href="http://sigmajs.org/">SigmaJS</a></li>
 		</ul>
 	</article>
 
