--- a/ui/index.html
+++ b/ui/index.html
@@ -4,31 +4,11 @@
 	<meta charset="utf-8"/>
 	<title>Health Mesh</title>
 	<meta name="description" content="Akka Http Webpack Seed"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Cory Prowse <cory@prowse.com>"/>
 	<meta name="robots" content="NOODP,NOYDIR"/>
 </head>
 <body>
-<main>
-	<h1>Health Mesh</h1>
-
-	<article>
-		SBT project that uses:
-		<ul>
-			<li><a href="http://doc.akka.io/docs/akka-http/current/scala.html">Akka HTTP</a> (Scala 2.12)</li>
-			<li><a href="http://swagger.io">Swagger</a> (See: <a
-				href="/api-docs/swagger.json">/api-docs/swagger.json</a>)
-			</li>
-			<li><a href="http://reactivex.io/rxjs/">RxJS 5</a></li>
-			<li><a href="https://www.typescriptlang.org/">TypeScript 2.1</a></li>
-			<li><a href="https://webpack.github.io/">Webpack 1</a> within <a href="http://gulpjs.com/">GulpJS 3</a></li>
-			<li><a href="https://www.w3.org/TR/websockets/">WebSocket</a></li>
-			<li><a href="https://developers.google.com/protocol-buffers/">Protobuf 3 (Java and JavaScript)</a></li>
-			<li><a href="http://sigmajs.org/">SigmaJS</a></li>
-		</ul>
-	</article>
-
-	<div id="digraph"></div>
-</main>
+<div id="root"></div>
 </body>
 </html>
