--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Health Mesh</title>
-	<meta name="description" content="Akka Http Webpack Seed"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Health Mesh App"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Cory Prowse <cory@prowse.com>"/>
 	<meta name="robots" content="NOODP,NOYDIR"/>
