--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Cory Prowse <cory@prowse.com>"/>
 	<meta name="robots" content="NOODP,NOYDIR"/>
-</head>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css"></head>
 <body>
 <div id="root"></div>
 </body>
